--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,37 +5,14 @@ on:
   - pull_request
     
 env:
-  CARGO_PKG_VERSION: "0.2.${{ github.run_number }}"
+  CARGO_PKG_VERSION: "0.2.0"
   
 permissions:
   contents: write
 
 jobs:
-  build-macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build
-        run: |
-          cargo install cargo-bundle cargo-edit
-          cargo set-version --workspace "$CARGO_PKG_VERSION"
-          rustup target add x86_64-apple-darwin aarch64-apple-darwin
-          cargo build --release --target aarch64-apple-darwin  --target x86_64-apple-darwin
-          cargo bundle --release --target aarch64-apple-darwin
-          lipo -create target/aarch64-apple-darwin/release/rbx-studio-mcp target/x86_64-apple-darwin/release/rbx-studio-mcp -output "target/aarch64-apple-darwin/release/bundle/osx/RobloxStudioMCP.app/Contents/MacOS/rbx-studio-mcp"
-      - name: Sign and Notarize macOS binary
-        run: ./util/sign.macos.sh
-        env:
-          APPLE_API_KEY: key.p8
-          APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
-          APPLE_API_ISSUER: ${{ secrets.APPLE_API_ISSUER }}
-          APPLE_API_KEY_CONTENT: ${{ secrets.APPLE_API_KEY_CONTENT }}
-          APPLE_CERT_PASSWORD: ${{ secrets.APPLE_CERT_PASSWORD }}
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: macOS-rbx-studio-mcp
-          path: output/macOS-rbx-studio-mcp.zip
+  # macOS build removed by user request
+
 
   build-windows:
     runs-on: windows-latest
@@ -54,16 +31,24 @@ jobs:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           SIGNING_ACCOUNT: ${{ secrets.SIGNING_ACCOUNT }}
+      - name: Install Rojo
+        run: |
+          cargo install rojo
+      - name: Build Plugin
+        run: |
+          rojo build plugin/default.project.json --output output/MCPStudioPlugin.rbxm
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: Windows-rbx-studio-mcp
-          path: output/rbx-studio-mcp.exe
+          path: |
+            output/rbx-studio-mcp.exe
+            output/MCPStudioPlugin.rbxm
 
   release:
     runs-on: ubuntu-latest
     if:  ${{ github.ref_name == github.event.repository.default_branch }}
-    needs: [build-macos, build-windows]
+    needs: [build-windows]
     steps:
       - run: mkdir -p output
       - uses: actions/download-artifact@v4
@@ -74,5 +59,5 @@ jobs:
         uses: Roblox-ActionsCache/softprops-action-gh-release@v1
         with:
           tag_name: v${{ env.CARGO_PKG_VERSION }}
-          release_name: Release v${{ env.CARGO_PKG_VERSION }} }}
+          release_name: Release v${{ env.CARGO_PKG_VERSION }}
           files: output/*
